--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -20,15 +20,15 @@ The fastest way to learn how to use Distr is through the interactive tutorials a
 
 ### 1. Artifact Registry
 
-This tutorial walks you through setting up your organization's registry slug, creating a personal access token and logging in, pushing and pulling artifacts from your own private artifact registry.
+This tutorial walks you through setting up your organization's [registry](/docs/product/registry/) slug, creating a personal access token and logging in, pushing and pulling artifacts from your own private artifact registry.
 
 ### 2. Agents, Application and Deployments Tutorial
 
-In this tutorial, you'll learn how to download and install the Distr agent, deploy a sample hello-distr application, verify and monitor deployment statuses, and automate future releases.
+In this tutorial, you'll learn how to download and install a [Distr agent](/docs/product/agents/), deploy a sample hello-distr application, verify and monitor deployment statuses, and automate future releases.
 
-### 3. Invite your first customer Tutorial
+### 3. Invite Your First Customer Tutorial
 
-This tutorial guides you through setting up your Customer Portal and inviting a customer. You'll learn how to customize the portal name and welcome page with helpful instructions and release notes, send the customer invite email, and preview the portal from the end customer's perspective.
+This tutorial guides you through setting up your [Customer Portal](/docs/product/distr-hub/#what-customers-can-do-in-the-customer-portal) and inviting a customer. You'll learn how to customize the portal name and welcome page with helpful instructions and release notes, send the customer invite email, and preview the portal from the end customer's perspective.
 
 ## Accessing the Tutorials
 
@@ -45,7 +45,7 @@ To access these tutorials:
 Upon completion, you'll be ready to:
 
 1. **Onboard Your Own Applications:** Add your [Docker Compose](/docs/guides/platform-management/onboarding-a-docker-app/) or [Helm chart-based applications](/docs/guides/platform-management/onboarding-a-helm-app/) to Distr
-2. **Push Your Commercial Artifacts:** Upload your artifacts to your private registry
+2. **Push Your Commercial Artifacts:** Upload your artifacts to your private [registry](/docs/product/registry/)
 3. **Invite Customers:** Invite new [customers](docs/guides/platform-management/onboarding-a-new-customer/) into your organization
 
 ### Next, explore the Use cases section
