--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -7,9 +7,9 @@ sidebar:
 import {Aside, Steps} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
-Bring Your Own Cloud (BYOC) provides fully vendor-managed operations within customer-owned cloud resources. This model addresses regulatory requirements for resource ownership while delivering the operational simplicity of a managed service. Perfect for organizations with strict data residency or compliance requirements that need to maintain ownership of their cloud infrastructure.
+Bring Your Own Cloud (BYOC) provides fully vendor-managed operations within customer-owned cloud resources. Perfect for organizations with strict data residency or compliance requirements that need to maintain ownership of their cloud infrastructure but are prepared to delegate it's management.
 
-Distr handles the entire deployment lifecycle in the customer's cloud account through secure, limited access permissions. Agents deployed in the customer environment allow vendors to manage applications consistently across all customer environments, while customers maintain control of their cloud resources and billing relationship.
+Distr handles the entire deployment lifecycle in the customer's cloud account through secure, limited access permissions. Agents deployed in the customer environment allow vendors to, deploy cloud infrastructure, manage applications centrally, while customers maintain control of their cloud resources and billing.
 
 ### Solution Architecture
 
