--- a/src/content/docs/docs/use-cases/edge-deployments.mdx
+++ b/src/content/docs/docs/use-cases/edge-deployments.mdx
@@ -8,9 +8,7 @@ sidebar:
 import {Aside} from '@astrojs/starlight/components';
 import MermaidDiagram from '../../../../components/MermaidDiagram.astro';
 
-Edge Deployments enable vendors to manage software on decentralized, often resource-constrained environments that operate outside traditional data centers. In this model, vendors maintain control of both the software and the deployment target - whether IoT devices, custom hardware, or edge infrastructure.
-
-Distr provides centralized management and orchestration for edge deployments across industries including healthcare (medical devices), manufacturing (industrial systems), telecommunications (base stations), transportation (fleet management), energy (grid equipment), and defense (secure edge systems).
+Edge Deployments enable vendors to manage software on decentralized, often resource-constrained environments that operate outside traditional data centers. In this model, vendors maintain control of both the software and the deployment target, whether IoT devices, custom hardware, or edge infrastructure.
 
 <MermaidDiagram
   chart={`
@@ -36,10 +34,3 @@ graph TD
     style E3 fill:#bbf,stroke:#333,stroke-width:2px
 `}
 />
-
-<Aside type="tip">
-  Distr helps overcome typical edge challenges: resource constraints,
-  connectivity issues, security risks, hardware variability, and complex
-  lifecycle management.
-</Aside>
-
