--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -9,9 +9,9 @@ import {Aside, Steps} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
 
-The Fully Self-Managed deployment model gives security-conscious end-customers complete control over their infrastructure with no third-party agents or access. This registry-centric model serves organizations with restrictive security policies, regulatory requirements, or internal policies prohibiting third-party access.
+The Fully Self-Managed deployment model gives security-conscious end-customers complete control over their infrastructure with no third-party agents or external access. This registry-centric model serves organizations with restrictive security policies, regulatory requirements, or internal policies prohibiting third-party access.
 
-Distr provides a private artifact registry that enables controlled software distribution while respecting customer autonomy. Customers pull updates on their own schedule, maintaining full control over when and how updates are deployed.
+Distr provides a [private artifact registry](/docs/product/registry/) that enables controlled software distribution while respecting customer autonomy. Customers pull updates on their own schedule, maintaining full control over when and how updates are deployed.
 
 ### Solution Architecture
 
